--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx4g -XX:+UseZGC -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx1g -Dfile.encoding=UTF-8 --enable-native-access=ALL-UNNAMED -Dhttps.protocols=TLSv1.2,TLSv1.3
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -21,3 +21,5 @@ android.enableJetifier=true
 kotlin.code.style=official
 # Gradle parallel build
 org.gradle.parallel=true
+# Suppress Java source/target version warnings
+android.javaCompile.suppressSourceTargetDeprecationWarning=true
